@@ -14,6 +14,7 @@ Nagios 3.x Change Log
 * Fix for bug in on-demand service macros with blank/null host names
 * Fix for cleaning up zombie child processes if large installation tweaks disabled and fork twice option disabled
 * Fix for incorrect total checks counts in nagiostats
+* Fix for segfault if embedded Perl support compiled in, but disabled by config file option
 
 
 
